--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ Thumbs.db
 
 # Optional: VSCode settings
 .vscode/
+
+/.pnp
+.pnp.js
+/coverage
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
